tests/test_assets/semantic/invalid/expressions/shift_count_out_of_range.expected
semantic error at line 6: shift count must be less than left operand bit width
semantic error at line 7: shift count must be less than left operand bit width
semantic error at line 8: shift count must be less than left operand bit width
semantic error at line 9: shift count must be less than left operand bit width
semantic error at line 10: shift count must be less than left operand bit width
semantic error at line 11: shift count must be less than left operand bit width
semantic error at line 12: shift count must be less than left operand bit width
7 semantic errors generated.
